# poem

./: .gitignore  Makefile  README.md  abstract.tex  acknowledgements.tex  analysis.tex  app-analysis.tex  body.tex  ccs-preamble.tex  conclusion.tex  construction.tex  definitions.tex  discussion.tex  ethics.tex  experiment.tex  frontpage.tex  gamma.tex  introduction.tex  llncs.cls  macros.tex  math.tex  metadata.txt  model.tex  more-experiments.tex  poem.tex  preamble.sty  pubs.bib  resilience.tex  stochastic-simulation.tex  title.tex  usenix.sty
rust-simulation/: Cargo.toml
rust-simulation/simulation_data/: gamma_latency_β_0.125_g_1.5.json  gamma_latency_β_0.15_g_1.5.json  gamma_latency_β_0.1_g_0.7.json  gamma_latency_β_0.1_g_1.5.json  gamma_latency_β_0.25_g_1.5.json  gamma_latency_β_0.2_g_1.5.json  gamma_latency_β_0.3_g_0.7.json  gamma_latency_β_0.3_g_1.5.json  gamma_latency_β_0.4_g_0.5.json
rust-simulation/src/: abstract_simulations.rs  lib.rs  main.rs  serial_simulations.rs  simulations.rs
simulation/: Cargo.toml  backbone.py  blocktree.py  poem-simulation.py  requirements.txt  run_simulations.sh  simulation.py
simulation/simulation_data/: bitcoin_vs_poem_beta_0.01_0.45_33_g_0.05_85.0_50_gamma_0_20.0_40_monte_carlo_100000_error_0.1.json  poem_g_latency_beta_0.2_g_0.1_6.3_50_gamma_0_monte_carlo_100000_error_0.1.json  poem_gamma_latency_beta_0.1_g_1.7_gamma_0_70_20_monte_carlo_100000_error_0.1.json  poem_gamma_latency_beta_0.3_g_0.4_gamma_0_70_35_monte_carlo_100000_error_0.1.json
simulation/src/: analysis.rs  backbone_simulation.py  blocktree.py  entropy.py  (+13 more)
(+21 files in other folders)
