[package]
name = "rust-simulation"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simulation"
path = "src/bin/simulation.rs"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
float-ord = "0.3"
rayon = "1.5"
clap = { version = "4.4.18", features = ["derive"] }
serde_json = "1.0.120"