[package]
name = "simulation"
version = "0.1.0"
edition = "2021"
authors = ["Karl Kreder", "Shreekara Shastry", "Apostolos Tzinas", "Sriram Vishwanath", "Dionysis Zindros"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.5"
serde_json = "1.0.120"
